Version 0.2.3
Date 18/Feb/2015
Notes
1. Upgraded to Grafana 1.9.1

************************************************************

Version 0.2.2 
Date 17/Feb/2015
Notes
1. Extended the user usage API endpoint response to include both the gauge and cumulative meter from OpenStack
2. The time of collection of the usage data from the openstack meter (gauge and cumulative) is same as the time of data entry into the db
3. Updated the installation file

************************************************************

Version 0.2.1
Date 02/Feb/2015
Notes
1. New API endpoint : Return user usage data
2. Method name refactoring
3. Addition of release notes and version

*************************************************************

Version 0.1.1 
Date 16/Jan/2015
Notes
1. Initial release
2. One click installation script for Sensu, InfluxDB, Grafana, Uchiwa, Apache2, Tomcat7 & UDR Service
3. Connector for OpenStack (Keystone and Ceilometer)
4. API for insertion of usage data from external application
5. Clients : InfluxDB, Telemetry & Keystone (OpenStack)